# ByeDPIAndroid

./: .gitignore  .gitmodules  README-ru.md  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
app/: .gitignore  build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/io/github/dovecoteescapee/byedpi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.h  native-lib.c  utils.c  utils.h
app/src/main/java/io/github/dovecoteescapee/byedpi/: Status.kt  (+5 more)
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/drawable/: ic_github_36.xml  ic_notification.xml  outline_settings_24.xml
app/src/main/res/drawable-anydpi-v24/: ic_search.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_app_selection.xml  fragment_filter.xml  item_app.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: menu_filter.xml  menu_main.xml  menu_settings.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: attrs.xml  colors.xml  themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  byedpi_cmd_settings.xml  byedpi_ui_settings.xml  main_settings.xml  settings.xml
fastlane/metadata/android/en-US/: short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
(+37 files in other folders)
